--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
+    "lint": "ts-standard",
+    "lint:fix": "ts-standard --fix",
     "start": "node build/index.js",
     "tsc": "tsc"
   },
@@ -14,9 +16,21 @@
   "devDependencies": {
     "@types/express": "^4.17.15",
     "ts-node-dev": "^2.0.0",
+    "ts-standard": "^12.0.2",
     "typescript": "^4.9.4"
   },
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "eslintConfig": {
+    "extends": ["./node_modules/ts-standard/eslintrc.json"],
+    "parserOptions": {
+      "project": "./tsconfig.json"
+    }
+  },
+  "ts-standard": {
+    "ignore": [
+      "build"
+    ]
   }
 }
